Downgraded jdk to 1.8