@@ -7,6 +7,7 @@ import com.github.redouane59.twitter.dto.user.User;
 import com.github.redouane59.twitter.dto.user.UserV2;
 import com.github.redouane59.twitter.helpers.ConverterHelper;
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
@@ -237,7 +238,7 @@ public class TweetV2 implements Tweet {
 
   public List<ContextAnnotation> getContextAnnotations() {
     if (this.data == null) {
-      return List.of();
+      return Collections.emptyList();
     }
     return this.data.getContextAnnotations();
   }
